<resources>
    <string name="app_name">LaWoof</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Secure Login</string>
    <string name="sign_in_other">Sign in with Social Networks</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="action_sign_in_facebook">Sign in with Facebook</string>
    <string name="action_sign_in_google_short">Google</string>
    <string name="action_sign_in_facebook_short">Facebook</string>
    <string name="action_register">Register</string>
    <string name="action_sign_up">Don\'t have an account?</string>
    <string name="action_sign_up_now"> Sign up now!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ok">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_pet_list">Pets</string>
    <string name="title_pet_detail">Pet Detail</string>
    //Map Options
    <string name="map_setting_normal">Normal Mode</string>
    <string name="map_setting_hybrid">Hybrid Mode</string>
    <string name="map_setting_sattelite">Sattelite Mode</string>
    <string name="map_setting_terrain">Terrain Mode</string>
    <string name="settings_api_test">API Test</string>
    <string name="pick_location">Pick location</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_date">Pick date</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_walk_list">Walks</string>
    <string name="title_walk_detail">Walk Detail</string>
    <string name="title_activity_tabber">Tabber</string>
    <string name="title_activity_test_tab">testTab</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test_tab2">LaWoof - Walks</string>
    <string name="test_btn_getWalks">Get Walks</string>
    <string name="test_btn_getPetsByEmail">Get Pets</string>
    <string name="test_btn_addPet">Add Pet</string>
    <string name="test_btn_addUser">Add User</string>

    <!-- Firebase related Strings -->
    <!--<string name="default_web_client_id">INPUT GOOGLE API KEY HERE</string>-->
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_sign_in_name">Name:</string>

    <string-array name="payment_methods">
        <item>Credit Card</item>
        <item>Paypal</item>
        <item>Bank</item>
    </string-array>
</resources>
