<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_walk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="250"
    android:tag="addWalk"
    tools:context="com.example.karrot.lawoof.WalkActivity">


    <EditText
        android:id="@+id/walk_add_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Pick a title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/walk_date"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/walk_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/pick_date"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/walk_time"
        app:layout_constraintTop_toBottomOf="@+id/walk_add_title" />

    <EditText
        android:id="@+id/walk_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/pick_time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/walk_place"
        app:layout_constraintTop_toTopOf="@+id/walk_date" />

    <EditText
        android:id="@+id/walk_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical|center"
        android:hint="@string/pick_location"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/walk_spinner"
        app:layout_constraintTop_toBottomOf="@+id/walk_time" />


    <com.example.karrot.lawoof.Util.Help.MultiSpinner
        android:id="@+id/walk_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="?attr/editTextBackground"
        android:prompt="@string/prompt_email"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_register_walk"
        app:layout_constraintTop_toTopOf="@+id/walk_place" />


    <Button
        android:id="@+id/btn_register_walk"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:text="OK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walk_spinner" />


</androidx.constraintlayout.widget.ConstraintLayout>
